# tsconfit2019

./: .prettierignore  .yarnrc  LICENSE  README.md  package.json  tsconfig.json
demo/: Dockerfile  README.md  benchmark.sh  build.sh  shell.sh
demo/plot/: run.sh
demo/rust/: results.txt
demo/rust/native/: Cargo.toml
demo/rust/runner/: Cargo.toml  LICENSE-MIT
demo/rust/runner/src/: api.rs  configuration.rs  data.rs  lib.rs  process_order_compose.rs  process_order_fp.rs  process_order_future.rs  process_order_futuredyn.rs  process_order_idiomatic.rs  process_order_imperative.rs  process_order_imperative_sync.rs  process_order_syncfp.rs  process_order_vanilla.rs  process_order_vanilla_sync.rs
demo/rust/wasm-web/: Cargo.toml  package-lock.json  webserver
demo/ts/: README.md  package.json  results.txt  tsconfig.json  yarn.sh
npm-packages-offline-cache/: fp-ts-2.0.5.tgz
rust/: Cargo.toml
rust/native/src/: main.rs
rust/runner/: Cargo.toml
rust/runner/src/: configuration.rs  lib.rs
rust/src/: api.rs  configuration.rs  data.rs  main.rs  process_order_fp.rs  process_order_vanilla.rs  process_order_vanilla_sync.rs
rust/src/runner/: api.rs  configuration.rs  data.rs  mod.rs  process_order_fp.rs  process_order_vanilla.rs  process_order_vanilla_sync.rs
rust/wasm/: Cargo.toml  README.md  get-code.sh
rust/wasm/src/: lib.rs
slides/: slides.md
src/: api.ts  benchmark.ts  configuration.ts  data.ts  index.ts  misc.ts  params.json  porcessOrderFp.ts  processOrderFp.ts  processOrderFpChecked.ts  processOrderVanilla.ts  processOrderVanillaSync.ts  result.txt
(+10 files in other folders)
