[package]
name = "runner"
version = "0.1.0"
authors = ["Massimiliano Mantione <massimiliano.mantione@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = "=0.3.0-alpha.18"
futures-core-preview = "=0.3.0-alpha.18"
futures-sink-preview = "=0.3.0-alpha.18"
futures-util-preview = { version = "=0.3.0-alpha.18", features = ["sink"] }
chrono = "0.4"
lazy_static = "1.4.0"
async-trait = "0.1.11"
fp-core = "0.1.8"
